--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "autoprefixer": "^9.8.6",
+    "axios": "^0.20.0",
     "missing": "0.0.1",
     "postcss-cli": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-spring": "^8.0.27",
     "tailwindcss": "^1.8.3"
   },
   "scripts": {
